@@ -2,7 +2,6 @@
     "$id": "docs/spec/transactions/mark.json",
     "type": ["object", "null"],
     "description": "A mark captures the timing in milliseconds of a significant event during the lifetime of a transaction. Every mark is a simple key value pair, where the value has to be a number, and can be set by the user or the agent.",
-    "regexProperties": true,
     "patternProperties": {
         "^[^.*\"]*$": {
             "type": ["number", "null"]
